--- a/k8s/distributor-dep.yaml
+++ b/k8s/distributor-dep.yaml
@@ -12,13 +12,13 @@ spec:
     spec:
       containers:
       - name: distributor
-        image: quay.io/cortexproject/cortex
+        image: quay.io/cortexproject/cortex:v0.1.0
         imagePullPolicy: IfNotPresent
         args:
         - -target=distributor
         - -log.level=debug
         - -server.http-listen-port=80
-        - -consul.hostname=consul.default.svc.cluster.local:8500
+        - -consul.hostname=consul.cortex.svc.cluster.local:8500
         - -distributor.replication-factor=1
         ports:
         - containerPort: 80
