--- a/k8s/grafana-svc.yaml
+++ b/k8s/grafana-svc.yaml
@@ -1,10 +1,9 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: configs-db
+  name: grafana
 spec:
   ports:
-    - port: 5432
+    - port: 3000
   selector:
-    name: configs-db
+    name: grafana
