--- a/k8s/query-frontend-dep.yaml
+++ b/k8s/query-frontend-dep.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: query-frontend
-        image: quay.io/cortexproject/cortex
+        image: quay.io/cortexproject/cortex:v0.1.0
         imagePullPolicy: IfNotPresent
         args:
         - -target=query-frontend
