--- a/k8s/retrieval-config.yaml
+++ b/k8s/retrieval-config.yaml
@@ -9,9 +9,27 @@ data:
       scrape_interval: 30s # By default, scrape targets every 15 seconds.
 
     remote_write:
-      - url: http://nginx.default.svc.cluster.local:80/api/prom/push
+      - url: http://nginx.cortex.svc.cluster.local:80/api/prom/push
 
     scrape_configs:
+    - job_name: prometheus
+      scrape_interval: 15s
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: http
+      static_configs:
+        - targets:
+          - localhost:9090
+
+    - job_name: ingester 
+      scrape_interval: 15s
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: http
+      static_configs:
+        - targets:
+            - ingester.cortex.svc.cluster.local:80
+
     - job_name: 'kubernetes-pods'
       kubernetes_sd_configs:
         - role: pod
