--- a/k8s/retrieval-dep.yaml
+++ b/k8s/retrieval-dep.yaml
@@ -18,7 +18,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: retrieval
-  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
@@ -31,7 +30,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: retrieval
-  namespace: default
+  namespace: cortex
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
