--- a/k8s/table-manager-dep.yaml
+++ b/k8s/table-manager-dep.yaml
@@ -12,13 +12,13 @@ spec:
     spec:
       containers:
       - name: table-manager
-        image: quay.io/cortexproject/cortex
+        image: quay.io/cortexproject/cortex:v0.1.0
         imagePullPolicy: IfNotPresent
         args:
         - -target=table-manager
         - -server.http-listen-port=80
         - -dynamodb.original-table-name=cortex
-        - -dynamodb.url=dynamodb://user:pass@dynamodb.default.svc.cluster.local:8000
+        - -dynamodb.url=dynamodb://user:pass@dynamodb.cortex.svc.cluster.local:8000
         - -dynamodb.periodic-table.prefix=cortex_weekly_
         - -dynamodb.periodic-table.from=2017-01-06
         - -dynamodb.chunk-table.from=2017-04-17
